<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="2"
            android:textAlignment="viewEnd"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="8dp"
        app:dividerColor="@color/grey"/>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="2">

      <Button
          style="@style/CalculationButton.circle"
          android:id="@+id/btn1"
          android:text="@string/ac"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn2"
          app:layout_constraintBottom_toTopOf="@id/btn5"/>

      <Button
          android:id="@+id/btn2"
          style="@style/CalculationButton.circle"
          android:text="@string/delete"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/btn1"
          app:layout_constraintEnd_toStartOf="@id/btn3"
          app:layout_constraintBottom_toTopOf="@id/btn6"/>

      <Button
          android:id="@+id/btn3"
          style="@style/CalculationButton.circle"
          android:text="@string/percent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/btn2"
          app:layout_constraintEnd_toStartOf="@id/btn4"
          app:layout_constraintBottom_toTopOf="@id/btn7"/>

      <Button
          android:id="@+id/btn4"
          style="@style/CalculationButton.circle"
          android:text="@string/divide"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/btn3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@id/btn8"/>

      <Button
          android:id="@+id/btn5"
          style="@style/CalculationButton.circle"
          android:text="@string/_7"
          app:layout_constraintBottom_toTopOf="@id/btn9"
          app:layout_constraintTop_toBottomOf="@id/btn1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn6"/>

      <Button
          android:id="@+id/btn6"
          style="@style/CalculationButton.circle"
          android:text="@string/_8"
          app:layout_constraintBottom_toTopOf="@id/btn10"
          app:layout_constraintTop_toBottomOf="@id/btn2"
          app:layout_constraintStart_toEndOf="@id/btn5"
          app:layout_constraintEnd_toStartOf="@id/btn7"/>

      <Button
          android:id="@+id/btn7"
          style="@style/CalculationButton.circle"
          android:text="@string/_9"
          app:layout_constraintBottom_toTopOf="@id/btn11"
          app:layout_constraintTop_toBottomOf="@id/btn3"
          app:layout_constraintStart_toEndOf="@id/btn6"
          app:layout_constraintEnd_toStartOf="@id/btn8"/>

      <Button
          android:id="@+id/btn8"
          style="@style/CalculationButton.circle"
          android:text="@string/x"
          app:layout_constraintBottom_toTopOf="@id/btn12"
          app:layout_constraintTop_toBottomOf="@id/btn4"
          app:layout_constraintStart_toEndOf="@id/btn7"
          app:layout_constraintEnd_toEndOf="parent"/>

      <Button
          android:id="@+id/btn9"
          style="@style/CalculationButton.circle"
          android:text="@string/_4"
          app:layout_constraintTop_toBottomOf="@id/btn5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn10"
          app:layout_constraintBottom_toTopOf="@id/btn13"/>
      <Button
          android:id="@+id/btn10"
          style="@style/CalculationButton.circle"
          android:text="@string/_5"
          app:layout_constraintTop_toBottomOf="@id/btn6"
          app:layout_constraintStart_toEndOf="@id/btn9"
          app:layout_constraintEnd_toStartOf="@id/btn11"
          app:layout_constraintBottom_toTopOf="@id/btn14"/>
      <Button
          android:id="@+id/btn11"
          style="@style/CalculationButton.circle"
          android:text="@string/_6"
          app:layout_constraintTop_toBottomOf="@id/btn7"
          app:layout_constraintStart_toEndOf="@id/btn10"
          app:layout_constraintEnd_toStartOf="@id/btn12"
          app:layout_constraintBottom_toTopOf="@id/btn15"/>
      <Button
          android:id="@+id/btn12"
          style="@style/CalculationButton.circle"
          android:text="@string/subtract"
          app:layout_constraintTop_toBottomOf="@id/btn8"
          app:layout_constraintStart_toEndOf="@id/btn11"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@id/btn16"/>

      <Button
          android:id="@+id/btn13"
          style="@style/CalculationButton.circle"
          android:text="@string/_1"
          app:layout_constraintTop_toBottomOf="@id/btn9"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn14"
          app:layout_constraintBottom_toTopOf="@id/btn17"/>

      <Button
          android:id="@+id/btn14"
          style="@style/CalculationButton.circle"
          android:text="@string/_2"
          app:layout_constraintTop_toBottomOf="@id/btn10"
          app:layout_constraintStart_toEndOf="@id/btn13"
          app:layout_constraintEnd_toStartOf="@id/btn15"
          app:layout_constraintBottom_toTopOf="@id/btn18"/>

      <Button
          android:id="@+id/btn15"
          style="@style/CalculationButton.circle"
          android:text="@string/_3"
          app:layout_constraintTop_toBottomOf="@id/btn11"
          app:layout_constraintStart_toEndOf="@id/btn14"
          app:layout_constraintEnd_toStartOf="@id/btn16"
          app:layout_constraintBottom_toTopOf="@id/btn18"/>

      <Button
          android:id="@+id/btn16"
          style="@style/CalculationButton.circle"
          android:text="@string/plus"
          app:layout_constraintTop_toBottomOf="@id/btn12"
          app:layout_constraintStart_toEndOf="@id/btn15"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@id/btn19"/>

      <Button
          android:id="@+id/btn17"
          style="@style/CalculationButton"
          android:text="@string/_0"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn18"
          app:layout_constraintHorizontal_weight="2.22"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn13" />

      <Button
          android:id="@+id/btn18"
          style="@style/CalculationButton.circle"
          android:text="@string/dot"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btn19"
          app:layout_constraintHorizontal_weight="1"
          app:layout_constraintStart_toEndOf="@id/btn17"
          app:layout_constraintTop_toBottomOf="@id/btn14" />

      <Button
          android:id="@+id/btn19"
          style="@style/CalculationButton.circle"
          android:text="@string/equal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_weight="1"
          app:layout_constraintStart_toEndOf="@id/btn18"
          app:layout_constraintTop_toBottomOf="@id/btn16" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>